Start example of pipe from js to cpp

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,9 @@ typings/
 # dotenv environment variables file
 .env
 
+# exclude VSCode meta information
+.vscode 
+
+# exclude build folder
+build
+
