--- a/00/package.json
+++ b/00/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "pipe-stream-js-to-cpp-example",
+  "name": "passthough-example",
   "version": "0.0.0",
-  "description": "Node.js Addons - Stream from JS to C++",
+  "description": "Node.js Addons - Passthrough example",
   "main": "index.js",
   "private": true,
   "gypfile": true,
   "dependencies": {
     "bindings": "*",
-    "node-addon-api": "*"
+    "node-addon-api": "*",
+    "readable-stream": "^2.3.6"
   }
 }
